CHD-1681 - add some logs